# Python-Oracle-CLI

./: .gitignore  README  README.md  last_insert.json  last_logs.txt  pyproject.toml
src/liouss-python-oracle-cli/: ORACLE_IDENTIFIER.example.json  oracle_cli.py
src/liouss_python_oracle_cli/: config.example.json  config.json  oracle_cli.py
