[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liouss-python-oracle-cli"
version = "0.0.2"
description = "Liouss' SQL Python Oracle CLI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["sqlparse", "liouss-python-toolkit @ git+https://github.com/LioussSuperDev/Python-Toolkit.git@stable", "liouss-python-sql-connectors @ git+https://github.com/LioussSuperDev/Python-SQL-Connectors.git@stable"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages]
find = { where = ["src"] }

[project.scripts]
oracle = "liouss_python_oracle_cli.oracle_cli:main"

[tool.setuptools.package-data]
liouss_python_oracle_cli = ["*.json"]